samples/_failures_safe/1761397087_c97033_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fb4ea6d.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_2fb4ea6d.c:161:5: error: expected identifier at end of input
  161 |     free(heap->
      |     ^~~~
./samples/SAFE/__tmp_2fb4ea6d.c:161:5: error: expected declaration or statement at end of input
